<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bcp_logo" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/exchangeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ds_16dp"
            android:layout_marginEnd="@dimen/ds_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCurrencyToChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCurrencyToChange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/you_send"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="100" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCurrencyToSend"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/selector_exchange_button"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/ds_16dp"
                    android:paddingEnd="@dimen/ds_48dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/tilCurrencyToChange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="@id/tilCurrencyToChange"
                    tools:text="USD" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCurrencyObtained"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tilCurrencyToChange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCurrencyObtained"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/you_obtain"
                        android:enabled="false"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="100" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCurrencyToObtain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/selector_exchange_button"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/ds_16dp"
                    android:paddingEnd="@dimen/ds_48dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/tilCurrencyObtained"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="@id/tilCurrencyObtained"
                    tools:text="S/" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.63" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabChangeCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ds_8dp"
                android:backgroundTint="@color/white"
                app:borderWidth="0dp"
                android:src="@drawable/ic_exchange"
                app:fabSize="mini"
                app:layout_anchor="@id/btnCurrencyToSend"
                app:layout_anchorGravity="bottom|right|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/exchangeInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exchangeContainer"
            tools:text="@string/exchange_information" />

        <Button
            android:id="@+id/btnBeginOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_begin_button"
            android:text="@string/begin_operation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>